java/java-tests/testData/ig/com/siyeh/igtest/bitwise/negative_int/beforeAddSuffix.java
// "Add 'L' suffix (changes semantics)" "true-preview"
class X {
  long x = 0xFFFF<caret>0000;
}